@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Device-ScanShare
-version:            1.012
+version:            1.013
 abstract:           manage USERDIRTS.TXT ecopy file to manage scanner device options
 author:
     - Leo Charre leocharre at cpan dot org
@@ -14,7 +14,6 @@ requires:
     Carp:             1
     Cwd:              3
     File::Path:       2.07
-    File::Slurp:      0
     Getopt::Std:      1.05
     LEOCHARRE::CLI:   1.19
     Smart::Comments:  1
@@ -24,7 +23,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
