@@ -1,3 +1,8 @@
+2009-09-24 16:20  cvs
+
+	* Makefile.PL, README, lib/Device/ScanShare.pm, t/0.t: Took out use
+	  of File::Slurp, was giving funny errors in some archs.
+
 2009-09-23 15:37  cvs
 
 	* Changes, Device-ScanShare-1.002.tar.gz, Makefile.PL, README,
